--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
 <form class="login-form">
+  <h1>Login</h1>
   <div>
     <label for="email-login">email:</label>
     <input type="text" id="email-login" />
@@ -10,23 +11,8 @@
   <div>
     <button type="submit">login</button>
   </div>
-</form>
-
-<form class="signup-form">
   <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
-  </div>
-  <div>
-    <label for="email-signup">email:</label>
-    <input type="text" id="email-signup" />
-  </div>
-  <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
+    <p>Don't have an account?<a href="/signup">Sign Up Here</a>!</p>
   </div>
 </form>
 
