--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <form class="login-form">
   <h1>Login</h1>
   <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
+    <label for="username-login">Username:</label>
+    <input type="text" id="username-login" />
   </div>
   <div>
     <label for="password-login">password:</label>
