Refactored the code by removing vote in the handlers. Fixed the handler to include the blog content.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,6 +37,16 @@ button:hover {
     background-color: #3486eb;
 }
 
+.border {
+    border: #3486eb solid 1px;
+    margin: 5px;
+    padding: 2px;
+}
+
+.background {
+    background-color: lightblue;
+}
+
 .post-list {
     margin: 0;
     padding: 0;
