--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -2,5 +2,6 @@
   <div class="title">
     <a href="/post/{{id}}" target="_blank">{{title}}</a>
     Posted by {{user.username}} on {{format_date created_at}}
+    <p>{{ blog_content }}</p>
   </div>
 </article>
