--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,20 +1,25 @@
 <section>
-    <h2>New Post</h2>
-
+    <h2>Create New Blog</h2>
     <form class="new-post-form">
+        <div>
+            <label for="post-title">Title</label>
+            <input type="text" id="post-title" name="post-title" />
+        </div>
+        <div>
+            <label for="blog_content">Blog</label>
+            <input class="" id="blog_content" name="blog_content" />
+        </div>
         <button type="submit" class="btn">Create</button>
     </form>
 </section>
 
 {{#if posts.length}}
 <section>
-    <h2>Your Posts</h2>
+    <h2>Your Blogs</h2>
     <ol>
         {{#each posts as |post|}}
-        <li>
-            {{> post-info post}}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-        </li>
+        {{> post-info post}}
+        <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
         {{/each}}
     </ol>
 </section>
