--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,8 @@
 <ol class="post-list">
     {{#each posts as |post|}}
-    <li>
+    <div class="border">
         {{> post-info post }}
-    </li>
+    </div>
+
     {{/each}}
 </ol>
