Added a copyright logo

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
             {{{ body }}}
         </main>
         <footer>
-            The Tech Blog
+            &copy; The Tech Blog
         </footer>
     </div>
 
